--- a/.eslintrc
+++ b/.eslintrc
@@ -1,31 +1,57 @@
- {
-    "parser": "@typescript-eslint/parser",
-    "plugins": ["@typescript-eslint", "prettier"],
-    "extends": [
-        "airbnb",
-        "plugin:import/errors",
-        "plugin:import/warnings",
-        "plugin:prettier/recommended",
-        "plugin:@typescript-eslint/recommended"
+{
+  "parser": "@typescript-eslint/parser",
+  "plugins": [
+    "@typescript-eslint",
+    "prettier"
+  ],
+  "extends": [
+    "airbnb",
+    "plugin:import/errors",
+    "plugin:import/warnings",
+    "plugin:prettier/recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "rules": {
+    "no-confusing-arrow": [
+      "error",
+      {
+        "allowParens": true,
+        "onlyOneSimpleParam": false
+      }
     ],
-    "rules": {
-        "no-confusing-arrow": [
-            "error",
-            { "allowParens": true, "onlyOneSimpleParam": false }
-        ],
-        "linebreak-style": 0,
-        "import/prefer-default-export": 0,
-        "prettier/prettier": 0,
-        "import/extensions": 0,
-        "no-use-before-define": 0,
-        "import/no-unresolved": 0,
-        "import/no-extraneous-dependencies": 0, // 테스트 또는 개발환경을 구성하는 파일에서는 devDependency 사용을 허용
-        "no-shadow": 0,
-        "react/prop-types": 0,
-        "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
-        "jsx-a11y/no-noninteractive-element-interactions": 0,
-        "react/react-in-jsx-scope": "off",
-
-        "arrow-parens": ["warn", "as-needed"]
-    }
- }
+    "linebreak-style": 0,
+    "import/prefer-default-export": 0,
+    "prettier/prettier": 0,
+    "import/extensions": 0,
+    "no-use-before-define": 0,
+    "import/no-unresolved": 0,
+    "import/no-extraneous-dependencies": 0,
+    // 테스트 또는 개발환경을 구성하는 파일에서는 devDependency 사용을 허용
+    "no-shadow": 0,
+    "react/prop-types": 0,
+    "react/jsx-filename-extension": [
+      2,
+      {
+        "extensions": [
+          ".js",
+          ".jsx",
+          ".ts",
+          ".tsx"
+        ]
+      }
+    ],
+    "jsx-a11y/no-noninteractive-element-interactions": 0,
+    "react/react-in-jsx-scope": "off",
+    "no-restricted-exports": "off",
+    "arrow-parens": [
+      "warn",
+      "as-needed"
+    ],
+    "react/function-component-definition": [
+      2,
+      {
+        "namedcomponents": "arrow-function"
+      }
+    ]
+  }
+}
