--- a/.eslintrc
+++ b/.eslintrc
@@ -40,6 +40,8 @@
         ]
       }
     ],
+    "camelcase": "off",
+    "@typescript-eslint/camelcase": "off",
     "jsx-a11y/no-noninteractive-element-interactions": 0,
     "react/react-in-jsx-scope": "off",
     "no-restricted-exports": "off",
